--- a/team/index.html
+++ b/team/index.html
@@ -36,7 +36,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektmanagerin Kooperationen<br> lydia.boettcher@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektmanagerin Digital-AGs<br> lydia.boettcher@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
