--- a/workshops/index.html
+++ b/workshops/index.html
@@ -10,7 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                     <h2 class="section-headline">Workshops, Workshops, Workshops</h2>
                     <p>
-                        Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
+                        In unseren Workshops könnt ihr eigene Nachrichtenredaktionen gründen, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                     </p>
                 </div>
             </div>
