--- a/team/index.html
+++ b/team/index.html
@@ -48,7 +48,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Organisation<br> paula.glaser@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Grünwald (geb. Glaser)</a> </span>Projektmanagerin Organisation<br> paula.glaser@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
