--- a/team/index.html
+++ b/team/index.html
@@ -159,6 +159,12 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://dragonlab.de/"> <img class="img-circle member-avatar" alt="Tobias Wehrum" src="/img/avatars/tobias.png"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue">Tobias Wehrum</a></span>programmierte die Ungehörsam-Apps.
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://polyspektiv.eu/"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv-logo.png"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
