--- a/presse/index.html
+++ b/presse/index.html
@@ -24,6 +24,8 @@ hide_hero: true
                     <a href="https://www.regio-tv.de/video_video,-jugendliche-entwickeln-onlinespiel-_vidid,146976.html" target="_blank">Jugendliche entwickeln Onlinespiel</a> (Regio TV Schwaben)<br> <br>
                     24.05.2018 <br> 
                     <a href="https://www.synergie.uni-hamburg.de/de/media/ausgabe05/synergie05-beitrag06-seitz-pfau-wolf.pdf" target="_blank">Demokratielabore. Mit digitalen Tools die Gesellschaft von morgen gestalten</a> (Synergie Fachmagazin)<br> <br>
+                    24.05.2018 <br> 
+                    <a href="https://www.youtube.com/watch?v=4J4BJiOvhbQ" target="_blank">Demokratielabore Pfingsten in Westernohe 2018</a> (YouTube-Video der Deutschen Pfadfinderschaft Sankt Georg)<br> <br>
                     22.05.2018 <br> 
                     <a href="https://www.bmfsfj.de/bmfsfj/themen/familie/mit-digitalen-tools-die-welt-von-morgen-gestalten/123520" target="_blank">Pfingstlager der Deutschen Pfadfinderschaft Sankt Georg: Mit digitalen Tools die Welt von morgen gestalten</a> (bmfsfj.de)<br> <br>
                     06.01.2018 <br> 
