--- a/team/index.html
+++ b/team/index.html
@@ -58,6 +58,18 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="mailto:maximilian.voigt@okfn.de"><img class="img-circle member-avatar" alt="Maximilian Voigt" src="/img/avatars/max.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a> </span>Projektmanager<br> maximilian.voigt@okfn.de
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="mailto:sonja.fischbauer@okfn.de"><img class="img-circle member-avatar" alt="Sonja Fischbauer src="/img/avatars/sonja.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:sonja.fischbauer@okfn.de">Sonja Fischbauer</a> </span>Projektmanagerin<br> sonja.fischbauer@okfn.de
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design<br> nadine.stammen@okfn.de
