--- a/team/index.html
+++ b/team/index.html
@@ -64,7 +64,7 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:sonja.fischbauer@okfn.de"><img class="img-circle member-avatar" alt="Sonja Fischbauer src="/img/avatars/sonja.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:sonja.fischbauer@okfn.de"><img class="img-circle member-avatar" alt="Sonja Fischbauer" src="/img/avatars/sonja.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:sonja.fischbauer@okfn.de">Sonja Fischbauer</a> </span>Projektmanagerin<br> sonja.fischbauer@okfn.de
                     </p>
