--- a/team/index.html
+++ b/team/index.html
@@ -72,7 +72,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design<br> nadine.stammen@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Designerin<br> nadine.stammen@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
