--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -18,7 +18,7 @@ hide_hero: true
                     <h1 class="section-headline text-center">Wer kann bei den Demokratielaboren mitmachen?</h1>
                     <p class="text-center">
                        Wir richten uns hauptsächlich an <a class="highlight-grey" href="#Jugendliche">Jugendliche</a>. Für die Unterstützung von Jugendlichen bieten wir aber ergänzend Angebote für
-                        <a class="highlight-grey" href="#Jugendeinrichtung">Jugendeinrichtungen</a> und 
+                        <a class="highlight-grey" href="#Jugendeinrichtung"> außerschulische Jugendeinrichtungen</a> und 
                         <a class="highlight-grey" href="#Jugendverband">pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a> an.
                     </p>
                      <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
@@ -33,23 +33,26 @@ hide_hero: true
                 <div class="col-lg-8 col-lg-offset-2 text__white">
                     <h2 class="section-headline">Für Jugendliche</h2>
                     <p class="text">
-                        Du hast Lust dir unsere Workshops anzuschauen und an ihnen teilzunehmen? Nice! Es gibt mehrere Möglichkeiten: Schau am besten erstmal auf unserem Terminkalender auf der Startseite, ob wir bald in deiner N&auml;he sind. Falls nicht, frag einfach mal in einer Jugendeinrichtung in deiner N&auml;he, ob sie uns einladen wollen oder schreib uns auf Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a> Wir probieren dann in einer Einrichtung deiner N&auml;he etwas zu organisieren.
+                        Du hast Lust einen oder mehrere  unserer Workshops auszuprobieren oder willst einmal in einer Digital-AG vorbeischauen? Nice! Es gibt mehrere Möglichkeiten: Auf unserer Startseite findest du unsere nächsten Workshop-Termine und unter Digital-AG alle Infos dazu, wo gerade AGs stattfinden. Nichts in deiner Nähe dabei? Dann  frag einfach mal deiner  Jugendeinrichtung nach, ob sie uns einladen wollen oder schreib uns auf Instagram, Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a>. Wir probieren dann in einer Einrichtung deiner Nähe etwas zu organisieren.
+
                     </p>
                     <p>
-                        Außerdem produzieren wir einen Youtube-Channel, auf dem du dich regelm&auml;ßig über netzpolitische Themen informieren kannst. <a class="highlight-white" href="https://www.facebook.com/aboutblankvideo/">Schau mal vorbei.</a>
+                        Außerdem haben wir einen Youtube-Channel, auf dem du dich über netzpolitische Themen informieren kannst. Schau mal vorbei.
+
+                        <a class="highlight-white" href="https://www.facebook.com/aboutblankvideo/">Schau mal vorbei.</a>
                    </p>
                     </div>
             </div>
         </div>
     </div>
 </div>
-<div class="beneath-sections jumbotron fond__white" id="Jugendeinrichtung">
+<div class="jumbotron fond__white" id="Jugendeinrichtung">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2">
             <h2 class="section-headline">Für Jugendeinrichtungen</h2>
                 <p>
                     <b>Schritt 1:</b> <br>
-                    Schreibt uns eine <a class="highlight-grey" href="mailto:info@demokratielabore.de">Mail</a>, wir melden uns bei euch.  
+                    Schreibt uns eine <a class="highlight-grey" href="mailto:info@demokratielabore.de">Mail</a>, wir melden uns bei euch zurück.  
                 </p>
                 <p>
                     <b> Schritt 2:</b> <br>
@@ -68,12 +71,12 @@ hide_hero: true
     </div>
 </div>
 <div class="parallax"></div>
- <div class="beneath-sections jumbotron fond__grey-bright" id="Jugendverband">
+ <div class="jumbotron fond__grey-bright" id="Jugendverband">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2 ">
             <h2 class="section-headline" > Für Fachkräfte in der Jugendarbeit</h2>
             <p class="text">
-                Wir wollen mit euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteur*innen im außerschulischen Bildungsbereich sichtbarer? Wir bieten wir verschiedene Workshops und Formate, in denen ihr eure Fähigkeiten im Bereich Digitalisierung, Daten und digitale Tools vertiefen und erweitern können.  <br> 
+                Wie können Verbände und Vereine in der außerschulischen Jugendarbeit  ihre interne Arbeitsorganisation mit digitalen Tools effektiver machen? Wie werden sie selbst als Akteur*innen im außerschulischen Bildungsbereich sichtbarer? Wir haben wir verschiedene Workshops und Formate konzipiert, in denen ihr eure Fähigkeiten im Bereich Digitalisierung, Daten und digitale Tools vertiefen und erweitern könnt. <br> 
             </p>
             <div class="btn-wrap">
                 <a href="/angebot/schulung/"><button  class="btn btn-start color-2">Erfahrt mehr zu Schulungen</button> </a>
