--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Hello
                 <div class="col-lg-10 col-lg-offset-1 section-intro">
                     <h2 class="section-headline">Mit digitalen Tools die Gesellschaft von morgen gestalten</h2>
                     <p>
-                       Wie können Jugendliche das Internet in Zeiten von Hate Speech und Populismus als positiven gestalten? Die Demokratielabore bieten verschiedene Formate rund um Digitalisierung, Technologien und gesellschaftliches Miteinander, in denen sich Jugendliche ausprobieren können.
+                       Wie können Jugendliche das Internet in Zeiten von Hate Speech und Populismus positiv gestalten? Die Demokratielabore bieten verschiedene Formate rund um Digitalisierung, Technologien und gesellschaftliches Miteinander, in denen sich Jugendliche ausprobieren können.
                     </p>
                     <div class="btn-wrap">
                         <a href="/info"><button  class="btn btn-start color-1">Über das Projekt</button> </a>
