--- a/info/index.html
+++ b/info/index.html
@@ -51,25 +51,7 @@ hide_hero: true
     </div>
 </div>
 
-<div class="beneath-sections fond__white jumbotron">
-    <div class="container text__black">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-headline">Evaluation</h2>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <p>
-                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, hat uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin begleitet, alle fünf Workshops aus 2017 evaluiert und auf ihre Wirksamkeit hin überprüft. Die Ergebnisse, Instrumente und Methoden der Evaluation stellen wir in diesem Abschlussbericht unter freier Lizenz zur Verfügung.  
-                </p>
-                <div class="btn-wrap">
-                    <a href="/static/doc/Abschlussbericht_nexus.pdf"><button  class="btn btn-start color-2">Abschlussbericht herunterladen</button> </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="beneath-sections jumbotron fond__grey-bright">
+<div class="beneath-sections jumbotron fond__white">
     <div class="container">
         <h2 class="section-headline text-center">Unser Leitbild</h2>
         <div class="row">
