--- a/team/index.html
+++ b/team/index.html
@@ -157,37 +157,44 @@ hide_hero: true
                          <span class="speaker-name"><a class="text__blue" href="http://vonspree.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht.
                     </p>
                 </div>
+
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie_alex.gif"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf 
-                         &amp; Alex Köpke</a></span>übernahmen 2017 die Gestaltung unseres Handbuchs und der Bedarfsanalyse in Rekordzeit.
+                         &amp; Alex Köpke</a></span>gestaltenen das Handbuchs und die Bedarfsanalyse in Rekordzeit.
                     </p>
                 </div>
+
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href=""> <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg"></a>
+                    <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg">
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte die Invasion der Cybertrolle.
+                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte den Workshop „Invasion der Cybertrolle“.
                     </p>
                 </div>
+
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://dragonlab.de/"> <img class="img-circle member-avatar" alt="Tobias Wehrum" src="/img/avatars/tobias.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue">Tobias Wehrum</a></span>programmierte die Ungehörsam-Apps.
+                         <span class="speaker-name"><a class="text__blue" href="http://dragonlab.de/">Tobias Wehrum</a></span>programmierte Apps für den Workshop Ungehörsam.
                     </p>
                 </div>
+
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="http://polyspektiv.eu/"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv-logo.png"></a>
+                    <a class="members-image-wrap" href="http://polyspektiv.eu"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv-logo.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
+                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop „Auf Mikas Spuren“.
                     </p>
                 </div>
+
+
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://stuhlkreisrevolte.de/"> <img class="img-circle member-avatar" alt="stuhlkreis_revolte" src="/img/avatars/stuhlkreis_revolte.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span>unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
                     </p>
                 </div>
+
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://www.creative-gaming.eu/"> <img class="img-circle member-avatar" alt="Creative Gaming" src="/img/avatars/Creative-Gaming.jpg"></a>
                     <p class="members-image-content">
