--- a/team/index.html
+++ b/team/index.html
@@ -162,7 +162,7 @@ hide_hero: true
                     <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie_alex.gif"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf 
-                         &amp; Alex Köpke</a></span>gestaltenen das Handbuchs und die Bedarfsanalyse in Rekordzeit.
+                         &amp; Alex Köpke</a></span>gestalteten das Handbuch, die Handreichungen und Bedarfsanalyse in Rekordzeit für uns.
                     </p>
                 </div>
 
