--- a/team/index.html
+++ b/team/index.html
@@ -169,21 +169,21 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg">
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte den Workshop „Invasion der Cybertrolle“.
+                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte den Workshop "Invasion der Cybertrolle".
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://dragonlab.de/"> <img class="img-circle member-avatar" alt="Tobias Wehrum" src="/img/avatars/tobias.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://dragonlab.de/">Tobias Wehrum</a></span>programmierte Apps für den Workshop Ungehörsam.
+                         <span class="speaker-name"><a class="text__blue" href="http://dragonlab.de/">Tobias Wehrum</a></span>programmierte Apps für den Workshop "Ungehörsam".
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://polyspektiv.eu"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv-logo.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop „Auf Mikas Spuren“.
+                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
                     </p>
                 </div>
 
