--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -23,13 +23,13 @@ hide_hero: true
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-3"></div>
                     {% for p in site.pages %}
-                      {% if p.type contains 'theme' or p.type == 'tool' %}
-                        {% if p.type contains 'theme' %}
+                      {% if p.layout == 'thema' or p.layout == 'tool' %}
+                        {% if p.layout == 'thema' %}
                         <div class="col-xs-12 col-md-6 col-lg-6 isotope-item post-teaser {{ p.type }}">
                         {% else %}
                         <div class="col-xs-12 col-md-6 col-lg-3 isotope-item post-teaser {{ p.type }}">
                         {% endif |%}
-                          {% if p.type contains 'theme' %}
+                          {% if p.layout == 'thema' %}
                             {% include thema-teaser-tile.html post=p %}
                           {% else %}
                             {% include tool-teaser-tile.html post=p %}
