--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -10,7 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                   <h2 class="section-headline">Mit digitalen Tools die Welt von Morgen gestalten</h2>
                     <p>
-                        Wie schaffen wir es eine Gesellschaft zu entwickeln, die im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Themen, die ein gutes Miteinander beschreiben und Tools, mit denen wir sie erreichen können. Wenn du direkt starten möchtest, dann findest du <a href="/ideas/">hier tolle Projektideen</a>.
+                        Wie schaffen wir es eine Gesellschaft zu entwickeln, die im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Themen, die ein gutes Miteinander beschreiben und Tools, mit denen wir sie erreichen können. Wenn du direkt starten möchtest, dann findest du <a href="/materialsammlung/ideas/">hier tolle Projektideen</a>.
                     </p>
                 </div>
             </div>
