--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -9,7 +9,7 @@ hide_hero: true
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                   <h2 class="section-headline">Aktiv werden und Demokratie mitgestalten</h2>
-                    <p>
+                    <p id="teaser-oer-page">
                         Wie schaffen wir es eine Gesellschaft zu entwickeln, die im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die ein gutes Miteinander beschreiben und Tools, mit denen wir das erreichen können. Wenn du direkt mit einem Projekt starten möchtest, dann findest du hier <a href="/materialsammlung/ideas/"> tolle Projektideen</a>.
                     </p>
                 </div>
