teaser-section oer

--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -4,10 +4,10 @@ title: "Themen"
 hide_hero: true
 ---
 <div class="row">
-    <div class="col-xs-12 fond__grey-bright jumbotron">
+    <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
-                <div class="col-lg-10 col-lg-offset-1 section-workshop">
+                <div class="col-lg-10 col-lg-offset-1 section-sammlung">
                   <h2 class="section-headline">Aktiv werden und Demokratie mitgestalten</h2>
                     <p id="teaser-oer-page">
                         Wie schaffen wir es eine Gesellschaft zu entwickeln, die im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die ein gutes Miteinander beschreiben und Tools, mit denen wir das erreichen können. Wenn du direkt starten möchtest, dann schaue dir unsere <a href="/materialsammlung/ideas/">Projektideen</a> an.
