--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -10,7 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-sammlung">
                   <h2 class="section-headline">Aktiv werden und Demokratie mitgestalten</h2>
                     <p id="teaser-oer-page">
-                        Wie schaffen wir es eine Gesellschaft zu entwickeln, die im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die ein gutes Miteinander beschreiben und Tools, mit denen wir das erreichen können. Wenn du direkt starten möchtest, dann schaue dir unsere <a href="/materialsammlung/ideas/">Projektideen</a> an.
+                        Wie schaffen wir es eine Gesellschaft zu gestalten, die offen & im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die eine solche Gesellschaft beschreiben und Tools, mit denen du diese erreichst & deine Meinung sichtbar machst.<br><br>Wenn du direkt starten möchtest, dann schaue dir unsere <a href="/materialsammlung/ideas/">Projektideen</a> an.
                     </p>
                     {% include blog-filters.liquid %}
                 </div>
