--- a/team/index.html
+++ b/team/index.html
@@ -201,6 +201,13 @@ hide_hero: true
                          <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span>unterstützt uns bei vielen Workshop-Durchführungen.
                     </p>
                 </div>
+            
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://www.youthpolicy.org/"> <img class="img-circle member-avatar" alt="Youth Policy Labs" src="/img/avatars/ypl_logo.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://www.youthpolicy.org/">Youth Policy Labs</a></span>entwickelten mit uns Materialien für die Selbstlernplattform.
+                    </p>
+                </div>
             </div> 
         </div>
     </div>             
