--- a/team/index.html
+++ b/team/index.html
@@ -203,7 +203,7 @@ hide_hero: true
                 </div>
             
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="http://www.youthpolicy.org/"> <img class="img-circle member-avatar" alt="Youth Policy Labs" src="/img/avatars/ypl_logo1.jpeg"></a>
+                    <a class="members-image-wrap" href="http://www.youthpolicy.org/"> <img class="img-circle member-avatar" alt="Youth Policy Labs" src="/img/avatars/ypl_logo1.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://www.youthpolicy.org/">Youth Policy Labs</a></span>entwickelten mit uns Materialien für die Selbstlernplattform.
                     </p>
