--- a/team/index.html
+++ b/team/index.html
@@ -21,10 +21,10 @@ hide_hero: true
     <div class="col-lg-12">
         <div class="container text__black">
             <h1 class="text-center section-headline">Und das sind wir</h1>
-                <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:markus.neuschaefer@okfn.de"> <img class="img-circle member-avatar" alt="Markus Neuschäfer" src="/img/avatars/markus.jpg"></a>
+                 <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="mailto:markus.neuschaefer@okfn.de">Markus Neuschäfer</a></span>Projektleiter <br> markus.neuschaefer@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektleiterin<br> lydia.boettcher@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
@@ -34,9 +34,9 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:maximilian.voigt@okfn.de"><img class="img-circle member-avatar" alt="Maximilian Voigt" src="/img/avatars/max.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektmanagerin Digital-AGs<br> lydia.boettcher@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a> </span>Projektmanager Digital-AGs & Materialplattform<br> maximilian.voigt@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
@@ -55,12 +55,6 @@ hide_hero: true
                     <a class="members-image-wrap" href="mailto:juliane.krueger@okfn.de"><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektmanagerin Organisation<br> juliane.krueger@okfn.de
-                    </p>
-                </div>
-                <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:maximilian.voigt@okfn.de"><img class="img-circle member-avatar" alt="Maximilian Voigt" src="/img/avatars/max.jpg"></a>
-                    <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a> </span>Projektmanager<br> maximilian.voigt@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
