--- a/add-project.html
+++ b/add-project.html
@@ -3,6 +3,8 @@ layout: base
 title: "Projektidee hinzufügen"
 permalink: /materialsammlung/ideas/add
 hide_hero: true
+script: |
+  <script type="text/javascript" src="/static/js/ideasForm.js"></script>
 ---
 <!-- Add project -->
 
