--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -10,7 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-sammlung">
                   <h2 class="section-headline">Aktiv werden und Demokratie mitgestalten</h2>
                     <p id="teaser-oer-page">
-                        Wie schaffen wir es eine Gesellschaft zu gestalten, die offen & im Sinne der Gemeinschaft ist? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die eine solche Gesellschaft beschreiben und Tools, mit denen du diese erreichst & deine Meinung sichtbar machst.<br><strong>Wenn du direkt starten möchtest, dann schaue dir die <a href="/materialsammlung/ideas/">Projektideen</a> an.</strong>
+                        Wie schaffen wir es, eine Gesellschaft zu gestalten, die offen ist und im Sinne der Gemeinschaft agiert? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die eine solche Gesellschaft ausmachen, und Tools, mit denen du zu einer solchen offenen Gesellschaft beitragen und deine Meinung sichtbar machen kannst.<br><strong>Wenn du gleich damit loslegen möchtest, dann schau dir die <a href="/materialsammlung/ideas/">Projektideen</a> an.</strong>
                     </p>
                     {% include blog-filters.liquid %}
                 </div>
