--- a/presse/index.html
+++ b/presse/index.html
@@ -18,6 +18,10 @@ hide_hero: true
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
+                    04.02.2019 <br>
+                    <a href="https://drk-wohlfahrt.de/blog/eintrag/mitmachen-statt-konsumieren-digitale-jugendsozialarbeit-hat-potential/" target="_blank">Mitmachen statt konsumieren – digitale Jugend(sozial)arbeit hat Potential!</a> (Blog der DRK Wohlfahrt) <br> <br>
+                    04.02.2019 <br>
+                    <a href="https://www.nomos-elibrary.de/10.5771/9783845294308-239/vom-konsum-zur-gestaltung-digitalitaet-und-engagement-in-der-ausserschulischen-jugendarbeit-am-beispiel-von-jugend-hackt-und-den-demokratielaboren" target="_blank">Vom Konsum zur Gestaltung - Digitalität und Engagement in der außerschulischen Jugendarbeit am Beispiel von Jugendhackt und den Demokratielaboren</a> (Buch: Digitalisierung und Teilhabe. Mitmachen, mitdenken, mitgestalten! Hrsg. von Sabine Skutta, Joß Steinke et al.) <br> <br>
                     02.02.2019 <br>
                     <a href="https://www.kika.de/erde-an-zukunft/sendungen/sendung111460.html" target="_blank">ERDE AN ZUKUNFT - Fake News - Lügen im Web!</a> (KiKa, Sendung 4 Wochen online einsehbar) <br> <br>
                     06.09.2018 <br> 
